@@ -491,7 +491,7 @@ public class GradleSourceSetModelBuilder extends AbstractModelBuilderService {
       externalSourceSet.setJavaToolchainHome(getJavaToolchainHome(project, javaCompile));
       externalSourceSet.setSourceCompatibility(javaCompile.getSourceCompatibility());
       externalSourceSet.setTargetCompatibility(javaCompile.getTargetCompatibility());
-      externalSourceSet.setPreview(javaCompile.getOptions().getCompilerArgs().contains("--enable-preview"));
+      externalSourceSet.setCompilerArguments(javaCompile.getOptions().getAllCompilerArgs());
     }
     if (externalSourceSet.getSourceCompatibility() == null) {
       externalSourceSet.setSourceCompatibility(sourceSetResolutionContext.projectSourceCompatibility);
